syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.fabriciolfj.proto.person";
option java_outer_classname = "PersonProto";

package personProto;

message PersonRequest {
    string name = 1;
}

message Person {
    string name = 1;
    int32 document = 2;
}

service PersonService {
    rpc generatedDoc(PersonRequest) returns (Person);
}